# quickcheck-extras

./: LICENSE  quickcheck-extras.cabal
.github/workflows/: build.yaml  release.yaml
